// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Select correctly with active sort 1`] = `
<UncontrolledDropdown
  aria-label="Sorter søkeresultat, Sort by title A-Z"
  className="ml-auto"
  id="search-result-dropdown-1"
  title="Sort by title A-Z"
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="fdk-button"
    color="primary"
    title=""
  >
    Sort by
     
    title A-Z
  </DropdownToggle>
  <DropdownMenu
    className="fdk-dropdownmenu"
    flip={true}
    right={true}
    tag="div"
  >
    <DropdownItem
      key="0"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by Relevance
    </DropdownItem>
    <DropdownItem
      key="1"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by title A-Z
    </DropdownItem>
    <DropdownItem
      key="2"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by Recently published
    </DropdownItem>
    <DropdownItem
      key="3"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by publisher A-Z
    </DropdownItem>
  </DropdownMenu>
</UncontrolledDropdown>
`;

exports[`should render Select correctly with no active sort 1`] = `
<UncontrolledDropdown
  aria-label="Sorter søkeresultat, Sort by Relevance"
  className="ml-auto"
  id="search-result-dropdown-1"
  title="Sort by Relevance"
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="fdk-button"
    color="primary"
    title=""
  >
    Sort by
     
    Relevance
  </DropdownToggle>
  <DropdownMenu
    className="fdk-dropdownmenu"
    flip={true}
    right={true}
    tag="div"
  >
    <DropdownItem
      key="0"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by Relevance
    </DropdownItem>
    <DropdownItem
      key="1"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by title A-Z
    </DropdownItem>
    <DropdownItem
      key="2"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by Recently published
    </DropdownItem>
    <DropdownItem
      key="3"
      onClick={[Function]}
      tag="button"
      title=""
      toggle={true}
    >
      Sort by publisher A-Z
    </DropdownItem>
  </DropdownMenu>
</UncontrolledDropdown>
`;
